# smartmotors-linux

./: .makefile.swo  .makefile.swp  CMakeLists.txt  Makefile  README.txt  README_GEN.txt  class_5_0_4_31.hez  main.c  makefile  package.xml  test  testSMX.smx  testSMXe.smxe
include/: Class5LinuxApp.h  kalmanfilter.hpp  medianfilter.hpp  wrapper.h
launch/: tension_controller.launch
msg/: arraycommand.msg  command.msg
src/: Class5LinuxApp.c  kalmanfilter.cpp  medianfilter.cpp  pid_tension.cpp  pid_tension_test.cpp  smartmotor.cpp  tension_rate_pid.cpp  testKalmanFilter.cpp  testMedianFilter.cpp  testcpp.cpp  wrapper.cpp
srv/: emergencyStop.srv  setAllMotorTensions.srv  setSpecificMotorTension.srv
